--- a/client/src/components/FirstPage/FirstPage.css
+++ b/client/src/components/FirstPage/FirstPage.css
@@ -45,11 +45,11 @@ h1 {
 	align-items: center; 
 	flex-direction: column;
 	text-transform: uppercase;
-	top: 40vh;
+	top: 15vh;
 	overflow: auto;
-	left:0;
-	width: 100%;
-	height: 100%;
+	left:15vh;
+	width: 80vw;
+	height: 70vh;
 }
 .full-screen__title {
 	font-size: 50px;
@@ -132,9 +132,9 @@ h1 {
 	top: 2vh;
 }
 .lib {
-	left:36.5vw;
-	top: 30vh;
-	font-size: 2.5rem;
+	left:39vw;
+	top: 2vh;
+	/* font-size: 2rem; */
 	
 }
 
