--- a/client/src/components/MyProject/MyProjectPage.css
+++ b/client/src/components/MyProject/MyProjectPage.css
@@ -1,5 +1,5 @@
 .btn1 {
-  display: flex;
+  display:inline-block;
   justify-content: center;
   outline: 2px outset white;
   background-color: black;
@@ -8,7 +8,7 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  height: auto;
+  height: 100px;
   width: auto;
   background-color: black;
   }
@@ -17,10 +17,14 @@
     margin-left: auto;
     margin-right: auto;
     background-color: black;
-    justify-content: column;
     align-items: center;
     height: auto;
     width: auto;
     flex-direction: column;
-  }
- 
+  } 
+   
+   .mainDiv {
+    height: 500px;
+    width: auto;
+    background-color: black;
+   }
