--- a/client/src/components/Cards/CardEditorPage.css
+++ b/client/src/components/Cards/CardEditorPage.css
@@ -2,9 +2,9 @@
   width: 33rem;
   height: 40rem;
   display: flex;
-  justify-content: space-around;
-  margin-left: auto;
-  margin-right: auto;
+  
+  /* margin-left: auto;
+  margin-right: auto; */
   background-color: rgb(30, 29, 29);
   outline: 2px outset white;
 }
@@ -12,9 +12,13 @@
 .cardPage {
   background-color: black;
   outline: 2px outset white;
+  justify-content: space-around;
+  justify-items: center;
+  align-self: center;
+  align-content: center;
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
   height: auto;
   margin-top: 50px;
   border-width: '0.5';
