--- a/client/src/components/Cards/CardCategoriesPage.css
+++ b/client/src/components/Cards/CardCategoriesPage.css
@@ -14,7 +14,7 @@
   margin-left: auto;
   margin-right: auto;
   height: auto;
-  padding-top: 20px;
+  /* padding-top: 20px; */
   margin-top: 0px;
   border-width: '0.5';
   box-shadow: '11px 14px 9px 1px  silver'
