--- a/client/src/components/Cards/CardProjectPage.css
+++ b/client/src/components/Cards/CardProjectPage.css
@@ -7,6 +7,7 @@
   margin-right: auto; */
   background-color: rgb(30, 29, 29);
   outline: 2px outset white;
+  height: auto;
 
  }
 
@@ -27,7 +28,6 @@
   outline: 2px outset white;
   background-color: black;
   margin-top: 5px;
-  margin-bottom: 5px;
 }
 
 .del {
