--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1,8 +1,8 @@
 .button{
   margin-top: 50px;
   margin-bottom: 60px;
-  padding: 15px;
-  font-weight: 600;
+  padding: 15px 0px 15px 0px;
+  /* font-weight: 600; */
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -12,8 +12,8 @@
   border-radius: 5px;
   margin-top: 50px;
   margin-bottom: 60px;
-  padding: 15px;
-  font-weight: 600;
+  padding: 15px 0px 15px 0px;
+  /* font-weight: 600; */
   display: flex;
   justify-content: center;
   outline: 2px outset white;
@@ -21,8 +21,8 @@
 .button2{
   margin-top: 50px;
   margin-bottom: 60px;
-  padding: 15px;
-  font-weight: 600;
+  padding: 15px 0px 15px 0px;
+  /* font-weight: 600; */
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -30,8 +30,8 @@
 }
 .button3{
   margin-top: 50px;
-  padding: 15px;
-  font-weight: 600;
+  padding: 15px 0px 15px 0px;
+  /* font-weight: 600; */
   border-radius: 5px;
   /* display: flex; */
   /* justify-content: center; */
