--- a/client/src/components/MyProject/MyProjectPage.css
+++ b/client/src/components/MyProject/MyProjectPage.css
@@ -1,8 +1,10 @@
 .btn1 {
-  display: inline-block;
+  position: absolute;
+  left: 50%;
   justify-content: center;
   outline: 2px outset white;
   background-color: black;
+  margin-top: 30px;
   }
 
 .projectDiv {
