--- a/client/src/components/Cards/CardCategoriesPage.css
+++ b/client/src/components/Cards/CardCategoriesPage.css
@@ -17,7 +17,9 @@
   /* padding-top: 20px; */
   margin-top: 0px;
   border-width: '0.5';
-  box-shadow: '11px 14px 9px 1px  silver'
+  box-shadow: '11px 14px 9px 1px  silver';
+ /* flex-wrap:wrap */
+  
 }
 .img {
   display: flex;
