--- a/client/src/components/LibraryPage/LibraryPage.css
+++ b/client/src/components/LibraryPage/LibraryPage.css
@@ -1,13 +1,16 @@
 .library {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   background-color: black;
   height: 100vh;
-  width: auto;
+  width: auto
 }
 .navbar {
 background-color: black;
 }
 .border {
   outline: 3px outset white;
+}
+.libraryCard {
+
 }
