--- a/client/src/components/EditProjectPage/EditProjectPage.css
+++ b/client/src/components/EditProjectPage/EditProjectPage.css
@@ -1,29 +1,30 @@
 .mainEdit {
+  background-color: black;
   height: 100vh;
   width: auto;
-  background-color: black;
  }
 .btnEdit {
-  position: absolute;
-  left: 50%;
+  position: relative;
+  margin-left: 50%;
   outline: solid white;
-  background-color: black;
-  margin-top: 80px;
-}
+ }
 .cardPage {
   left: 50%;
   justify-content: center;
+  height: unset !important;
+  width: auto;
   outline: solid white;
   background-color: black;
-  margin-left: 150px;
-  margin-right: 150px;
-  margin-top: 120px;
-  /* padding-top: 100px; */
+  margin-top: %;
   }
 .graph {
   margin-left: 100px;
   justify-content: center;
   display: block;
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
+  /* margin-top: 50px; */
+ }
+ .cardEditor {
+ 
  }
