--- a/client/src/components/Navbar/NavBar.css
+++ b/client/src/components/Navbar/NavBar.css
@@ -2,15 +2,17 @@
   outline: 2px outset white;
   color: white;
   border-radius: 5px;
- }
-.navbar{
-/* outline: 3px outset white; */
 }
+
 .container-fluid {
   outline: unset !important;
   /* border-bottom: white; */
 
 }
+
 .border {
   outline: 3px outset white;
-}
+  /* position: fixed;
+  top: 100;
+  width: 100%; */
+ }
