--- a/client/src/components/Cards/CardCategoriesPage.css
+++ b/client/src/components/Cards/CardCategoriesPage.css
@@ -1,6 +1,5 @@
 .card {
-  /* width: 70rem; */
-  height: 40rem;
+  width: 500x;
   display: flex;
   /* margin-left: auto;
   margin-right: auto; */
@@ -27,7 +26,7 @@
  }
  .borderCard {
   display: flex;
-  width: 500px;
+  width: 450px;
   height: 500px;
  }
  .desc {
