--- a/client/src/components/Cards/CardEditorPage.css
+++ b/client/src/components/Cards/CardEditorPage.css
@@ -30,6 +30,7 @@
   outline: 2px outset white;
   background-color: black;
   margin-top: 15px;
+  width: inherit;
  }
 .name {
   display: contents;
@@ -60,4 +61,7 @@
   display: flex;
   width: auto;
   height: 300px;
+ } */
+ /* #exploreBtn {
+  width: -webkit-fill-available;
  } */
