--- a/client/src/components/Cards/CardProjectPage.css
+++ b/client/src/components/Cards/CardProjectPage.css
@@ -20,6 +20,7 @@
   background-color: black;
   display: flex;
   justify-content: space-around;
+  outline: none;
 
 }
 
@@ -56,7 +57,7 @@
 
 .img {
   display: flex;
-  width: auto;
+  width: 450px;
   height: 300px;
   margin: 40px;
   border-radius: 1%;
