--- a/client/src/components/NodeVeiwerPage/NodeVeiwerPage.css
+++ b/client/src/components/NodeVeiwerPage/NodeVeiwerPage.css
@@ -3,3 +3,26 @@
   width: auto;
   background-color: black;
 }
+
+.text {
+  border: solid 200px white;
+  border-radius: 5px;
+  margin-left: 20%;
+  margin-right: 20%;
+  color: black;
+  background-color: white;
+
+}
+
+.nodeBut {
+  padding: 12px 20px;
+  display: inline-block;
+  box-sizing: border-box;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+     
+}
+.nbt {
+ margin-right: 15px;
+}
