--- a/client/src/components/Navbar/NavBar.css
+++ b/client/src/components/Navbar/NavBar.css
@@ -6,17 +6,55 @@
 
 .container-fluid {
   outline: unset !important;
-  /* border-bottom: white; */
 
 }
 
 .border {
   outline: 3px outset white;
-  /* position: fixed;
-  top: 100;
-  width: 100%; */
- }
- .nav{
+}
+
+#navbar0 {
   display: flex;
-  justify-content:flex-end;
+  justify-content: right;
+  align-items: center;
+  width: 100%; 
+}
+
+/* #navbar {
+  display: flex;
+  width: 90%;
+} */
+
+/* #navbarSupportedContent {
+  display: flex;
+  justify-content: flex-end;
+  
+}*/
+/* #nav {
+  display: flex;
+  justify-content: right;
+  /* align-items: center; */
+/* }  */
+/* li {
+  display: flex;
+  justify-content:
+} */
+/* #navBut {
+  display: flex;
+  justify-content: space-between;
+
+} */
+
+#lid {
+  width: auto; 
+  padding: 8px 30px;
+  box-sizing: border-box;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+#home {
+  display: flex;
+  justify-content: flex-start; 
+  margin-left: 1530px;
 }
