--- a/client/src/components/Navbar/NavBar.css
+++ b/client/src/components/Navbar/NavBar.css
@@ -15,26 +15,25 @@
 
 #navbar0 {
   display: flex;
-  justify-content: right;
-  align-items: center;
-  width: 100%; 
+  justify-content: space-between;
 }
 
-/* #navbar {
-  display: flex;
-  width: 90%;
-} */
+#navbar {
+  /* display: flex;
+  width: 100%;
+  justify-content: space-around; */
+}
 
 /* #navbarSupportedContent {
   display: flex;
   justify-content: flex-end;
   
 }*/
-/* #nav {
+#nav {
   display: flex;
-  justify-content: right;
-  /* align-items: center; */
-/* }  */
+  flex-direction: row;
+  justify-content: space-around;
+}
 /* li {
   display: flex;
   justify-content:
@@ -45,16 +44,16 @@
 
 } */
 
-#lid {
-  width: auto; 
-  padding: 8px 30px;
+
+
+#lid { 
+  /* padding: 8px 30px;
   box-sizing: border-box;
   display:flex;
   justify-content:center;
-  align-items:center;
+  align-items:center; */
 }
 #home {
-  display: flex;
-  justify-content: flex-start; 
-  margin-left: 1530px;
+  /* display: flex;
+  justify-content: flex-start;  */
 }
